[gd_scene load_steps=2 format=2]

[ext_resource path="res://ControlPanel/BoosterReleaseButton.gd" type="Script" id=1]

[node name="BoosterReleaseButton" type="Control"]
margin_left = 606.0
margin_top = 655.0
margin_right = 776.0
margin_bottom = 825.0
script = ExtResource( 1 )

[node name="ReleaseHighlight" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -101.0
margin_right = 101.0
margin_bottom = 101.0

[node name="ReleaseButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Release boosters"

[node name="ReleaseTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ReactionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="ReleaseButton" to="." method="_on_ReleaseButton_pressed"]
[connection signal="timeout" from="ReleaseTimer" to="." method="_on_ReleaseTimer_timeout"]
[connection signal="timeout" from="ReactionTimer" to="." method="_on_ReactionTimer_timeout"]
